sidebar vertical align fixed

--- a/media/css/sb-admin-2.css
+++ b/media/css/sb-admin-2.css
@@ -163,7 +163,7 @@ body {
         z-index: 1;
         position: absolute;
         width: 250px;
-        margin-top: 51px;
+        margin-top: 54px;
     }
 
     .navbar-top-links .dropdown-messages,
